# yt-desktop-downloader

./: .gitignore  index.html  package.json  splashscreen.html  vite.config.ts
py/: test.py
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Downloads.tsx  Settings.tsx  SongCard.tsx  UrlCard.tsx
